# viewarr-workspace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
jupyterlab-fitsview/: .copier-answers.yml  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  conftest.py  install.json  package.json  pyproject.toml  tsconfig.json  viewarr
jupyterlab-fitsview/binder/: environment.yml  postBuild
jupyterlab-fitsview/fitsview/: __init__.py  handlers.py
jupyterlab-fitsview/fitsview/tests/: __init__.py  generate_files.py  test_handlers.py
jupyterlab-fitsview/jupyter-config/server-config/: fitsview.json
jupyterlab-fitsview/src/: handler.ts  index.ts  viewarr.d.ts  widget.ts
jupyterlab-fitsview/src/__tests__/: fitsview.spec.ts
jupyterlab-fitsview/style/: base.css
jupyterlab-fitsview/ui-tests/: jupyter_server_test_config.py  package.json
jupyterlab-fitsview/ui-tests/tests/: fitsview.spec.ts
pyviewarr/: .gitignore  AGENTS.md  README.md  build.mjs  package-lock.json  package.json  playwright.config.ts  preconfigured_state_example.ipynb  pyproject.toml
pyviewarr/js/: viewarr.d.ts  widget.css  widget.ts
pyviewarr/notebooks/: galaxy_viewerconfig_demo.ipynb  shift_click_callback_demo.ipynb  usage_and_cube_slicing_example.ipynb
pyviewarr/src/pyviewarr/: __init__.py
pyviewarr/tests/: test_normalize.py
pyviewarr/tests/e2e/: jupyter_server_config.py  pyviewarr.spec.ts
pyviewarr/tests/e2e/notebooks/: widget_smoke.ipynb
viewarr/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate_colormaps.py  package-lock.json  package.json
viewarr/js/: index.d.ts  index.js
viewarr/src/: app.rs  colormap.rs  colormap_luts.rs  lib.rs  transform.rs  widget.rs
