[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fitsview"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "jupyterlab>=4.0.0",
    "jupyter_server>=2.4.0,<3",
    "astropy>=5.0",
    "numpy",
]
dynamic = ["version", "description", "urls", "authors", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0",
    "pygments",
]

# Single source of truth for the version: the monorepo git tag (e.g. v0.3.4),
# shared with pyviewarr so both packages always release the same version.
# root = ".." points setuptools_scm at the monorepo root where .git lives.
[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", local_scheme = "no-local-version" }

# Project metadata (description/authors/urls/keywords) still comes from package.json.
[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["fitsview/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"fitsview/labextension" = "share/jupyter/labextensions/fitsview"
"install.json" = "share/jupyter/labextensions/fitsview/install.json"

[tool.hatch.build.hooks.version]
path = "fitsview/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "fitsview/labextension/static/style.js",
    "fitsview/labextension/package.json",
]
skip-if-exists = ["fitsview/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "fitsview/labextension"

[tool.check-wheel-contents]
ignore = ["W002"]
